--- a/app/views/book/edit.html.erb
+++ b/app/views/book/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Book#edit</h1>
-<p>Find me in app/views/book/edit.html.erb</p>
+<h1>Editing book</h1>
+<%= form_with model: @book, url: update_book_path(@book.id), method: :patch, local:true do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Update Book' %>
+
+  <%= link_to "Show", book_path(@book.id) %>
+  <%= link_to "Back", index_path %>
+<% end %>
