--- a/app/views/book/show.html.erb
+++ b/app/views/book/show.html.erb
@@ -1,10 +1,12 @@
-<h2>title</h2>
+<p><%= notice %></p>
+
+<h2>Title</h2>
 <p><%= @book.title %></p>
 
-<h2>body</h2>
+<h2>Body</h2>
 <p><%= @book.body %></p>
 
 
 
 <%= link_to "edit", edit_book_path(@book.id) %>
-<%= link_to "delete", destroy_book_path(@book.id), method: :delete, "data-confirm" => "Are you sure？" %>
+<%= link_to "back", index_path %>
