--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -9,5 +9,5 @@
   <%= f.submit 'Update Book' %>
 
   <%= link_to "Show", book_path(@book.id) %>
-  <%= link_to "Back", index_path %>
+  <%= link_to "Back", books_path %>
 <% end %>
