--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,3 @@
-<p><%= notice %></p>
 
 <h2>Title</h2>
 <p><%= @book.title %></p>
@@ -9,4 +8,4 @@
 
 
 <%= link_to "edit", edit_book_path(@book.id) %>
-<%= link_to "back", index_path %>
+<%= link_to "back", books_path %>
