--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Bookers</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="csrf-param" content="authenticity_token" />
-    <meta name="csrf-token" content="lTFn+Xq0nI5ncnP06A+LjFXdIGcDHjEK4IyTw0lEomEuTOeb1qe06lINH9BNdEBO+8LynY3AKtxcneH6CV1K4g==" />
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1">-->
+    <!--<meta name="csrf-param" content="authenticity_token" />-->
+    <!--<meta name="csrf-token" content="lTFn+Xq0nI5ncnP06A+LjFXdIGcDHjEK4IyTw0lEomEuTOeb1qe06lINH9BNdEBO+8LynY3AKtxcneH6CV1K4g==" />-->
 
-    <link rel="stylesheet" media="all" href="/assets/application-d12397cbc3a266ce5a99f7b588223090c55ca04a439953bb5f9304395de93fc3.css" data-turbolinks-track="reload" />
-    <script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>
+    <!--<link rel="stylesheet" media="all" href="/assets/application-d12397cbc3a266ce5a99f7b588223090c55ca04a439953bb5f9304395de93fc3.css" data-turbolinks-track="reload" />-->
+    <!--<script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -16,6 +16,18 @@
   </head>
 
   <body>
+
+    <div class="flash">
+         <% if flash[:notice] %>
+         <%= flash[:notice] %>
+         <% end %>
+    </div>
+
+
+  <!--<%# flash.each do |name, msg| %>-->
+  <!--    <%#= content_tag :p, msg, id: "notice" %>-->
+  <!--  <%# end %>-->
+
     <%= yield %>
   </body>
 </html>
